...
    
    private func initViews(){
        self.loadingView.modalPresentationStyle = .overCurrentContext
        
        self.configTableView(tableView: self.usersTableView)
        
        self.searchField.placeholder = "Search user"
        self.searchField.returnKeyType = .search
        self.searchField.delegate = self
        self.searchField.addTarget(self, action: #selector(textFieldDidChange(_:)), for: .editingChanged)
    }
    
    func setDataFromDB(users:[User]){
...
