...
                                <rect key="frame" x="126.5" y="148" width="163.5" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="igU-7n-pT9"/>
                                </constraints>
                                <color key="tintColor" red="0.08903039317" green="0.5" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="VER PUBLICACIONES"/>
                                <connections>
                                    <action selector="goToPostsAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nq0-Zx-APP"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
